@startuml

title __RAYTRACERV0.7's Class Diagram__\n

  namespace up.edu.isgc.raytracer {
    interface up.edu.isgc.raytracer.IIntersectable {
    }
  }
  

  namespace up.edu.isgc.raytracer {
    class up.edu.isgc.raytracer.Intersection {
    }
  }
  

  namespace up.edu.isgc.raytracer {
    class up.edu.isgc.raytracer.Ray {
    }
  }
  

  namespace up.edu.isgc.raytracer {
    class up.edu.isgc.raytracer.Raytracer {
    }
  }
  

  namespace up.edu.isgc.raytracer {
    class up.edu.isgc.raytracer.Scene {
    }
  }
  

  namespace up.edu.isgc.raytracer {
    class up.edu.isgc.raytracer.Vector3D {
    }
  }
  

  namespace up.edu.isgc.raytracer {
    namespace lights {
      class up.edu.isgc.raytracer.lights.DirectionalLight {
      }
    }
  }
  

  namespace up.edu.isgc.raytracer {
    namespace lights {
      abstract class up.edu.isgc.raytracer.lights.Light {
      }
    }
  }
  

  namespace up.edu.isgc.raytracer {
    namespace lights {
      class up.edu.isgc.raytracer.lights.PointLight {
      }
    }
  }
  

  namespace up.edu.isgc.raytracer {
    namespace objects {
      class up.edu.isgc.raytracer.objects.Camera {
      }
    }
  }
  

  namespace up.edu.isgc.raytracer {
    namespace objects {
      abstract class up.edu.isgc.raytracer.objects.Object3D {
      }
    }
  }
  

  namespace up.edu.isgc.raytracer {
    namespace objects {
      class up.edu.isgc.raytracer.objects.Polygon {
      }
    }
  }
  

  namespace up.edu.isgc.raytracer {
    namespace objects {
      class up.edu.isgc.raytracer.objects.Sphere {
      }
    }
  }
  

  namespace up.edu.isgc.raytracer {
    namespace objects {
      class up.edu.isgc.raytracer.objects.Triangle {
      }
    }
  }
  

  namespace up.edu.isgc.raytracer {
    namespace tools {
      class up.edu.isgc.raytracer.tools.Barycentric {
      }
    }
  }
  

  namespace up.edu.isgc.raytracer {
    namespace tools {
      abstract class up.edu.isgc.raytracer.tools.OBJReader {
      }
    }
  }
  

  up.edu.isgc.raytracer.Intersection o-- up.edu.isgc.raytracer.Vector3D : normal
  up.edu.isgc.raytracer.Intersection o-- up.edu.isgc.raytracer.objects.Object3D : object
  up.edu.isgc.raytracer.Intersection o-- up.edu.isgc.raytracer.Vector3D : position
  up.edu.isgc.raytracer.Ray o-- up.edu.isgc.raytracer.Vector3D : direction
  up.edu.isgc.raytracer.Ray o-- up.edu.isgc.raytracer.Vector3D : origin
  up.edu.isgc.raytracer.Scene o-- up.edu.isgc.raytracer.objects.Camera : camera
  up.edu.isgc.raytracer.lights.DirectionalLight -up-|> up.edu.isgc.raytracer.lights.Light
  up.edu.isgc.raytracer.lights.DirectionalLight o-- up.edu.isgc.raytracer.Vector3D : direction
  up.edu.isgc.raytracer.lights.Light -up-|> up.edu.isgc.raytracer.objects.Object3D
  up.edu.isgc.raytracer.lights.PointLight -up-|> up.edu.isgc.raytracer.lights.Light
  up.edu.isgc.raytracer.objects.Camera -up-|> up.edu.isgc.raytracer.objects.Object3D
  up.edu.isgc.raytracer.objects.Object3D .up.|> up.edu.isgc.raytracer.IIntersectable
  up.edu.isgc.raytracer.objects.Object3D o-- up.edu.isgc.raytracer.Vector3D : position
  up.edu.isgc.raytracer.objects.Polygon -up-|> up.edu.isgc.raytracer.objects.Object3D
  up.edu.isgc.raytracer.objects.Sphere -up-|> up.edu.isgc.raytracer.objects.Object3D
  up.edu.isgc.raytracer.objects.Triangle .up.|> up.edu.isgc.raytracer.IIntersectable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
